<resources>
    <string name="app_name">時刻表</string>
    <!-- 路線アイテム削除確認ダイアログ用 -->
    <string name="route_list_item_delete_confirm_message">このアイテムを削除しますか？</string>
    <string name="route_list_item_delete_confirm_yes">はい</string>
    <string name="route_list_item_delete_confirm_no">いいえ</string>
    <!-- 路線アイテム編集ダイアログ用 -->
    <string name="route_list_item_edit_yes">選択</string>
    <string name="route_list_item_edit_no">キャンセル</string>
    <!-- 路線検索入力ダイアログ用 -->
    <string name="search_input_message">追加したい駅名を入力してください</string>
    <string name="search_input_yes">検索開始</string>
    <string name="search_input_no">キャンセル</string>
    <!-- 駅選択ダイアログ用 -->
    <string name="select_station_message">追加対象を選択してください</string>
    <string name="select_station_yes">OK</string>
    <string name="select_station_no">Cancel</string>
    <!-- 駅選択ダイアログ用 -->
    <string name="select_filter_message">表示対象を選択してください</string>
    <string name="select_filter_yes">OK</string>
    <string name="select_filter_no">Cancel</string>
    <!-- 設定フラグメント用 -->
    <string name="preference_category_migration">データ移行</string>
    <string name="preference_restore">リストア</string>
    <string name="preference_restore_summary">時刻表情報をバックアップから復元します</string>
    <string name="preference_backup">バックアップ</string>
    <string name="preference_backup_summary">時刻表情報をバックアップします</string>
    <string name="preference_category_help">ヘルプ</string>
    <string name="preference_app_info">アプリケーション情報</string>

    <!-- アプリケーション情報ダイアログ用 -->
    <string name="app_info_dialog_title">時刻表</string>
    <string name="route_add_menu">路線検索</string>
    <string name="route_manual_sort">並び替え</string>
    <string name="route_list_setting_menu">設定</string>
    <string name="setting_title_filter">フィルタ</string>
</resources>