...
    onDismiss: () -> Unit
) {
    if (isVisible) {
        val editOptions = listOf(
            "更新" to EditType.Update,
            "色設定" to EditType.SetColor,
            "削除" to EditType.Delete
        )

        AlertDialog(
            onDismissRequest = onDismiss,
            title = {
                Text(
                    text = "編集操作を選択してください",
                    style = MaterialTheme.typography.headlineSmall
                )
            },
            text = {
                Column(
                    modifier = Modifier
...
